--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -24,6 +24,7 @@ jobs:
           BASE_URL: ${{ secrets.BASE_URL }}
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
           COMMITER_NAME: ${{ secrets.COMMITER_NAME }}
+          GITLAB_COMMITER_NAME: ${{ secrets.GITLAB_COMMITER_NAME }}
           COMMITER_EMAIL: ${{ secrets.COMMITER_EMAIL }}
           ORIGIN_REPO_URL: ${{ secrets.ORIGIN_REPO_URL }}
           ORIGIN_TOKEN: ${{ secrets.ORIGIN_TOKEN }}
